flux/default/postgres/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: postgres
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  egress: []
